# trail-edgar

./: .gitignore  README.md  pyproject.toml
tests/: conftest.py  test_convert.py  test_live.py  test_mapping.py  test_source.py
trail_edgar/: __init__.py  convert.py  mapping.py  periods.py  schema_fields.py  source.py  universe.py
